--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "dprint": "^0.45.0",
+    "dprint": "^0.45.1",
+    "dprint-rs-npm": "https://github.com/dalisoft/dprint-rs-npm.git",
     "markdownlint-cli2": "^0.13.0",
     "prettier": "^3.2.5"
-  }
+  },
+  "trustedDependencies": [
+    "dprint-rs-npm"
+  ]
 }
