--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "dprint": "^0.45.1",
-    "dprint-rs-npm": "https://github.com/dalisoft/dprint-rs-npm.git",
+    "dprint-rs-npm": "^0.45.1",
     "markdownlint-cli2": "^0.13.0",
     "prettier": "^3.2.5"
   },
